Added required selector for v1 API version

--- a/deployment.yml
+++ b/deployment.yml
@@ -17,6 +17,9 @@ kind: Deployment
 metadata:
   name: gke-test
 spec:
+  selector:
+    matchLabels:
+      app: nginx
   replicas: 1
   strategy:
     rollingUpdate:
