--- a/deployment.yml
+++ b/deployment.yml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: delta-data
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: delta-data
   replicas: 1
   template:
     metadata:
       labels:
-        app: nginx
+        app: delta-data
     spec:
       containers:
       - name: nginx
